Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38418

Regression: Clicking combo boxes away crashes application

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.3.0
    • 5.3.0 RC1
    • GUI: Look'n'Feel
    • None
    • OS X 10.9, qt/release, qtbase 8b0fd78caa8e257757d3eb84732e38cf735b2136
    • 079f2bf5d8a4221b821ec8062affe2efaa9668a0

      open a combo box (e.g. from attached example), click outside of the combo box to close it -> crash

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   QtGui                         	0x00000001006aaa84 QWindow::type() const + 4
      1   libqcocoa.dylib               	0x0000000105e8961d -[QNSView mouseDown:] + 189
      2   com.apple.AppKit              	0x00007fff97ba2b48 -[NSWindow sendEvent:] + 11296
      3   libqcocoa.dylib               	0x0000000105e80197 -[QNSWindow superSendEvent:] + 39
      4   libqcocoa.dylib               	0x0000000105e7fc4b -[QNSWindowHelper handleWindowEvent:] + 411
      5   com.apple.AppKit              	0x00007fff97b416e4 -[NSApplication sendEvent:] + 2021
      6   libqcocoa.dylib               	0x0000000105e956ee -[QNSApplication sendEvent:] + 78
      7   com.apple.AppKit              	0x00007fff97991b89 -[NSApplication run] + 646
      8   libqcocoa.dylib               	0x0000000105e92335 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2149
      9   QtCore                        	0x0000000100e0ddfd QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 381
      10  QtCore                        	0x0000000100e10cfc QCoreApplication::exec() + 364
      11  de.foobaruntitled1            	0x00000001000026fb main + 91 (main.cpp:10)
      12  de.foobaruntitled1            	0x0000000100002694 start + 52
      

        1. untitled1.zip
          3 kB
          Eike Ziller
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            con Eike Ziller
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes